content-restapi-ingress/http-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  labels:
    app: default-http-backend
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: default-http-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-http-backend
  labels:
    app: default-http-backend
spec:
  selector:
    matchLabels:
      app: default-http-backend
  template:
    metadata:
      labels:
        app: default-http-backend
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: http-backend-data
      containers:
        - image: spaship/httpd
          name: spaship
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: "/var/www/html"
