content-restapi-ingress/restapi.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: restapi
  labels:
    app: restapi
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: restapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi
  labels:
    app: restapi
spec:
  selector:
    matchLabels:
      app: restapi
  template:
    metadata:
      labels:
        app: restapi
    spec:
      containers:
        - image: lkrzyzanek/helloworld-restapi:2.0
          name: restapi
          ports:
            - containerPort: 8080
