content-restapi-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: content-restapi
spec:
  rules:
    - host: minikube.info
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: restapi
                port:
                  number: 8080
